// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldArray /> tests render initial value when given 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests render placeholder when no initial value given 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
      </div>
      <div
        class="noData"
      >
        <div
          class="text"
        >
          This is a no data/add data message.
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color withLeftIcon"
          data-id="btn-add-no-data"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to add rows from both buttons 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to add rows from both buttons 2`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to delete row 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to render custom fields 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th>
              Column Header 3
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td>
              <div
                id="#customField"
              />
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td>
              <div
                id="#customField"
              />
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;
